Fix align problem

--- a/www/src/components/AppShell/style.scss
+++ b/www/src/components/AppShell/style.scss
@@ -5,4 +5,7 @@
     justify-content: space-between;
     min-height: 100vh;
   }
+  .children {
+    margin-bottom: auto;
+  }
 }
