--- a/www/src/routes/PageHome/style.scss
+++ b/www/src/routes/PageHome/style.scss
@@ -25,7 +25,7 @@
   .bannerContainer {
     @include graduate;
     @include disable-select;
-    margin-top: 0;
+    margin-top: 8%;
     font-size: 4rem;
   }
 
@@ -47,7 +47,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 10rem;
     .fbPage {
       // color: white;
       font-size: 0.85rem;
